mdapipkg/objects/RptChapterRoster__c.object
<CustomObject>
    <description>Proof of Concept to demonstrate complex reports</description>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <label>Chapter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RptChapterRosters</relationshipLabel>
        <relationshipName>RptChapterRosters_HH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RptChapterRosters</relationshipLabel>
        <relationshipName>RptChapterRosters_Spouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spouse_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spouse Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RptChapterRosters (Spouse Contact)</relationshipLabel>
        <relationshipName>RptChapterRosters_Spouse_Spouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RptChapterRoster</label>
    <nameField>
        <label>RptChapterRoster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RptChapterRosters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>